# python-grpc-bazel

./: .gitignore  Makefile  README.md  WORKSPACE  api.py  bazel-bin  bazel-out  bazel-python-grpc  bazel-testlogs  cp.sh  server.py
proto/: BUILD.bazel  service.proto
